# Vosk-SAPI

./: .gitignore  CMakeLists.txt
include/: AudioCapture.h  VoskSAPI.h
src/: AudioCapture.cpp  VoskSAPI.cpp  main.cpp
